# ROS-robot-arm-with-flask

./: README.md
Train Model/: getData.py  trainmodel.ipynb
camera_processing/: ImageProcessing.py  Snapshot.py  app.py  base_camera.py  classifyObject.pkl  communication.py  handle_camera.py  video.py
camera_processing/templates/: dropdown.html  index.html
ur5e_epick_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_epick_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5e_epick.srdf
ur5e_epick_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_epick_moveit_controller_manager.launch.xml  ur5e_epick_moveit_planning_execution.launch  warehouse.launch
ur5e_epick_moveit_config/urdf/: ur5e_epick_auto_gen.urdf
ur_description/: CMakeLists.txt
ur_kinematics/: CMakeLists.txt  ur_moveit_plugins.xml
vnbots_gazebo/: CMakeLists.txt  package.xml
vnbots_gazebo/config/: ur5e_controllers.yaml
vnbots_gazebo/config/ur5e/: joint_limits.yaml
vnbots_gazebo/launch/: demo.launch  ur5e_epick_bringup.launch
vnbots_gazebo/launch/inc/: load_ur5e_epick.launch.xml  ur_control.launch.xml
vnbots_gazebo/meshes/robotiq_epick/collision/: robotiq_epick.stl
vnbots_gazebo/meshes/robotiq_epick/visual/: robotiq_epick.dae
vnbots_gazebo/models/VNBot_case/: model.config  model.sdf
vnbots_gazebo/models/ball/: ball.config
vnbots_gazebo/models/black_table/: model.config  model.sdf
vnbots_gazebo/models/box/: box.sdf
vnbots_gazebo/scripts/: call_service.txt  robotControl.py  sever.py  spawn_object.py
vnbots_gazebo/scripts/ball/: ball .rsdf  ball.sdf
vnbots_gazebo/scripts/bowl/: model.sdf
vnbots_gazebo/scripts/box/: box.config
vnbots_gazebo/scripts/gear_part/: model.sdf
vnbots_gazebo/srv/: EndPosition.srv
vnbots_gazebo/urdf/: camera_description.urdf.xacro  ur5e_robotiq_epick_robot.urdf.xacro
vnbots_gazebo/urdf/inc/: camera.gazebo.xacro  camera_model.xacro  robotiq_epick.gazebo.xacro  robotiq_epick_model.xacro  ur5e_macro.xacro
vnbots_gazebo/worlds/: lab_setup.world
